@@ -1,5 +1,13 @@
 2011-09-01  Bruno Haible  <bruno@clisp.org>
 
+	imaxabs: Avoid link error on OSF/1 with DTK cc.
+	* m4/imaxabs.m4 (gl_FUNC_IMAXABS): Also test whether imaxabs is defined
+	as a function.
+	* modules/imaxabs (configure.ac): Test whether imaxabs is defined, not
+	whether it is declared.
+
+2011-09-01  Bruno Haible  <bruno@clisp.org>
+
 	pthread: Determine $(LIB_PTHREAD) correctly on IRIX 6.5.
 	* m4/pthread.m4 (gl_PTHREAD_CHECK): Check for pthread_join, not
 	pthread_create.
